<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="calculate_bmi">calculate bmi</string>
    <string name="get_advice">get advice</string>
    <string name="enter_height">Enter height</string>
    <string name="enter_weight">Enter weight</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi_result">BMI Result:</string>
    <string name="english_unit">English unit</string>
    <string name="metric_unit">Metric unit</string>
    <string name="bmichart">bmiChart</string>
    <string name="normal">normal</string>
    <string name="advice">advice</string>
    <string name="enter_weight_in_pounds">Enter weight in pounds</string>
    <string name="enter_height_in_inches">Enter height in inches</string>
</resources>
